add mininal dev server setup

--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,6 @@
       <input type="text" id="age" required />
       <button>Submit</button>
     </form>
+    <script src="bundle.js"></script>
   </body>
 </html>
